# goit-web-hw-10

./: data.json  docker-compose.yml  main.bat  pyproject.toml  requirements.txt
authors/: manage.py
authors/authors/: settings.py  urls.py
authors/quotes/: config.ini  db.py  forms.py  lib.py  models.py  models2.py  parse.py  urls.py  utils.py  views.py
authors/quotes/migrations/: 0001_initial.py
authors/quotes/static/quotes/: style.css
authors/quotes/templates/quotes/: add-author.html  author_detail.html  base.html  index.html  parse_website.html  quote.html  quotes_by_tag.html
authors/quotes/templatetags/: extract.py
authors/users/: forms.py  urls.py  views.py
authors/utils/: add_quotes_to_mongo.py  authors.json  local.authors.json  local.quotes.json  middleware.py  migration_mongo_to_postgres.py
