[project]
name = "goit-web-hw-10-p"
version = "0.1.0"
description = "Django quotes app"
authors = [
    {name = "Ivan Kravchuk",email = "vank300828@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
